--- a/app/views/user/order.html.erb
+++ b/app/views/user/order.html.erb
@@ -5,7 +5,7 @@
     <button type="button" id="login" class="btn btn-primary navbar-btn">Sign in with Facebook</button>
     <button type="button" id="logout" class="btn btn-danger navbar-btn">Sign out</button>
   </div>
-  <div id="order-container" ng-controller="orderController">
+  <div id="order-container" ng-controller="OrderController">
 
   </div>
   <div class="panel panel-warning">
