--- a/app/views/user/order.html.erb
+++ b/app/views/user/order.html.erb
@@ -1,12 +1,12 @@
 <div id="spin"></div>
-<div class="container">
+<div class="container" ng-controller="">
   <h1>EzOrder</h1>
   <div>
-    <button type="button" id="login" class="btn btn-primary navbar-btn">Sign in with Facebook</button>
-    <button type="button" id="logout" class="btn btn-danger navbar-btn">Sign out</button>
+    <button type="button" id="login" ng-hide="auth.user" ng-click="userLogin()" class="btn btn-primary navbar-btn">Sign in with Facebook</button>
+    <button type="button" id="logout" ng-show="auth.user" ng-click="userLogout()" class="btn btn-danger navbar-btn">Sign out</button>
   </div>
-  <div id="order-container" ng-controller="OrderController">
-
+  <div id="order-container">
+    {{orders}}
   </div>
   <div class="panel panel-warning">
     <!-- Default panel contents -->
