--- a/app/assets/javascripts/routes.js.erb
+++ b/app/assets/javascripts/routes.js.erb
@@ -6,23 +6,23 @@ angular.module('myApp.routes', ['ngRoute'])
    // which should only be available while logged in
    .config(['$routeProvider', function($routeProvider) {
       $routeProvider.when('/home', {
-         templateUrl: 'assets/templates/home.html',
+         templateUrl: '<%= asset_path("home.html") %>',
          controller: 'HomeCtrl'
       });
 
       $routeProvider.when('/chat', {
-         templateUrl: 'assets/templates/chat.html',
+         templateUrl: '<%= asset_path("chat.html") %>',
          controller: 'ChatCtrl'
       });
 
       $routeProvider.when('/account', {
          authRequired: true, // must authenticate before viewing this page
-         templateUrl: 'assets/templates/account.html',
+         templateUrl: '<%= asset_path("account.html") %>',
          controller: 'AccountCtrl'
       });
 
       $routeProvider.when('/login', {
-         templateUrl: 'assets/templates/login.html',
+         templateUrl: '<%= asset_path("login.html") %>',
          controller: 'LoginCtrl'
       });
 
