--- a/app/assets/javascripts/routes.js.erb
+++ b/app/assets/javascripts/routes.js.erb
@@ -6,11 +6,13 @@ angular.module('myApp.routes', ['ngRoute'])
    // which should only be available while logged in
    .config(['$routeProvider', function($routeProvider) {
       $routeProvider.when('/home', {
+         // authRequired: true,
          templateUrl: '<%= asset_path("home.html") %>',
          controller: 'HomeCtrl'
       });
 
       $routeProvider.when('/chat', {
+         authRequired: true,
          templateUrl: '<%= asset_path("chat.html") %>',
          controller: 'ChatCtrl'
       });
