--- a/app/views/user/order.html.erb
+++ b/app/views/user/order.html.erb
@@ -1,53 +1,14 @@
 <div id="spin"></div>
 <div class="container">
   <h1>EzOrder</h1>
-  <div>
+  <!-- <div>
     <button type="button" id="login" ng-hide="auth.user" ng-click="userLogin()" class="btn btn-primary navbar-btn">Sign in with Facebook</button>
     <button type="button" id="logout" ng-show="auth.user" ng-click="userLogout()" class="btn btn-danger navbar-btn">Sign out</button>
-  </div>
+  </div> -->
   <div id="order-container" ng-view>
-    
+
   </div>
-  <div class="panel panel-warning">
-    <!-- Default panel contents -->
-    <div class="panel-heading">五十嵐</div>
-    <div class="panel-body">
-      <p>2014/2/28: 10:30 開單，2014/2/28: 11:30 截止</p>
-    </div>
-    <!-- Table -->
-    <table class="table">
-      <thead>
-        <tr>
-          <td>品項</td>
-          <td>甜度</td>
-          <td>冰塊</td>
-          <td>單價</td>
-          <td>數量</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>檸檬綠</td>
-          <td>
-            <div class="btn-group-xs">
-              <button type="button" class="btn btn-default active">Left</button>
-              <button type="button" class="btn btn-default">Middle</button>
-              <button type="button" class="btn btn-default">Right</button>
-            </div>
-          </td>
-          <td>
-            <div class="btn-group-xs">
-              <button type="button" class="btn btn-default">Left</button>
-              <button type="button" class="btn btn-default">Middle</button>
-              <button type="button" class="btn btn-default">Right</button>
-            </div>
-          </td>
-          <td>30</td>
-          <td>4</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+
   <p class="navbar-text">aaa</p>
 
   <input type="text" id="text" placeholder="Order Name" value=""/>
